--- a/cv/index.html
+++ b/cv/index.html
@@ -259,15 +259,15 @@
 <h2 id="education">Education</h2>
 
 <ul>
-  <li>I am currently writing my PhD dissertation on human translation difficulties under the supervision of Prof. Elke Teich at Universität des Saarlandes.</li>
-  <li>I received a Translation and Interpreting degree (B: English; C: German; A1: Spanish, A2: Catalan) and a DEA in Translation, Society and Communication from Universitat Jaume I.</li>
+  <li>I am currently writing my PhD dissertation on human translation difficulties under the supervision of Prof. <a href="http://fr46.uni-saarland.de/index.php?id=3425">Elke Teich</a> at <a href="http://www.uni-saarland.de/nc/en/home.html">Universität des Saarlandes</a>.</li>
+  <li>I received a Translation and Interpreting degree (B: English; C: German; A1: Spanish, A2: Catalan) and a DEA in Translation, Society and Communication from <a href="http://uji.es">Universitat Jaume I</a>.</li>
 </ul>
 
 <h2 id="experience">Experience</h2>
 
 <ul>
-  <li>I’ve worked as a research assistant in CLARIN-D and GECCo at Universität des Saarlandes and Universität Heidelberg, and previously in ECPC at Universitat Jaume I.</li>
-  <li>I’ve supported projects in the administrative front at EXPERT and SFB 1102.</li>
+  <li>I’ve worked as a research assistant in <a href="http://clarin-d.net">CLARIN-D</a> and <a href="http://www.gecco.uni-saarland.de">GECCo</a> at <a href="http://www.uni-saarland.de/nc/en/home.html">Universität des Saarlandes</a> and <a href="http://www.uni-heidelberg.de/index_e.html">Universität Heidelberg</a>, and previously in <a href="http://www.ecpc.uji.es">ECPC</a> at <a href="http://uji.es">Universitat Jaume I</a>.</li>
+  <li>I’ve supported research projects <a href="http://expert-itn.eu">EXPERT ITN</a> and <a href="http://www.sfb1102.uni-saarland.de">SFB 1102</a> in the administrative front too.</li>
 </ul>
 
 <h2 id="geek">Geek</h2>
@@ -291,7 +291,7 @@
 
 <h2 id="interests">Interests</h2>
 
-<p>If you cannot reach me or I don’t answer your call or message I am probably (but not necessarily in this order)…</p>
+<p>If you cannot reach me is probably because (but not necessarily in this order) I am…</p>
 
 <ul>
   <li>climbing</li>
@@ -305,6 +305,7 @@
   <li>having a glass of wine with friends</li>
   <li>learning something knew</li>
   <li>reading a good book</li>
+  <li>…</li>
 </ul>
 
         
